# nym-updater

./: .gitignore  Cargo.toml  README.md  auto_update_config.json
src/: main.rs
src/appclient/: base_client.rs  github_client.rs  mod.rs  nym_github_client.rs
src/appclient/interfaces/: i_github_release.rs  mod.rs
src/appclient/urls/: github_urls.rs  mod.rs
src/cmd/: cmd.rs
src/constants/: mod.rs  nym_release_assets.rs
src/prompt/: asset_select.rs  mod.rs
src/updater/: mod.rs  nym_updater.rs
src/util/: app_logger.rs  config_file_util.rs  mod.rs  systemd_file_util.rs
