[package]
name = "nym-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
cmd_lib = "1.9.3"
cron = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.193"
chrono = "0.4.31"
inquire = "0.6.2"

